# pnglitchr

./: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md
R/: 000-wrappers.R  pnglitchr-package.R
man/: pnglitch.Rd  pnglitchr-package.Rd
src/: Makevars.in  Makevars.win.in  init.c  pnglitchr-win.def
src/rust/: Cargo.toml  LICENSE  README.md  api.h
src/rust/src/: lib.rs
src/rust/src/examples/: filter_application.rs  filter_removal.rs  glitch.rs  transpose.rs
src/rust/src/operation/: encode.rs  mod.rs  scan.rs  transpose.rs
src/rust/src/png/: mod.rs  png_error.rs
src/rust/src/png/parser/: mod.rs  terminator.rs
src/rust/src/png/parser/chunk/: chunk_type.rs  mod.rs
src/rust/src/png/parser/header/: color_type.rs  meta_data.rs  mod.rs
src/rust/src/png/scan_line/: filter_type.rs  memory_range.rs  mod.rs
src/rust/src/png/scan_line/filter/: average.rs  byte.rs  mod.rs  paeth.rs  sub.rs  up.rs
tests/: testthat.R
tests/testthat/: test-glitch.R
