[package]
name = "pnglitchr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
anyhow = "1.0.95"
crc32fast = "1.4.2"
fdeflate = "0.3.7"
thiserror = "2.0.9"
rand = "0.8.5"
savvy = "*"

[profile.release]
# By default, on release build, savvy terminates the R session when a panic
# occurs. This is the right behavior in that a panic means such a fatal event
# where we can have no hope of recovery.
#
# cf. https://doc.rust-lang.org/book/ch09-03-to-panic-or-not-to-panic.html
#
# However, it's possible that the panic is thrown by some of the dependency
# crate and there's little you can do. In such cases, you can change the
# following line to `panic = "unwind"` to always catch a panic.
panic = "abort"
